--- a/home.html
+++ b/home.html
@@ -10,10 +10,10 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
     <!-- Css Styles -->
-    <link rel="stylesheet" href="../PTUD_N10-master/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="../PTUD_N10-master/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="../PTUD_N10-master/css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="../PTUD_N10-master/css/home.css" type="text/css">
+    <link rel="stylesheet" href="../PTUD_N10/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../PTUD_N10/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="../PTUD_N10/css/jquery-ui.min.css" type="text/css">
+    <link rel="stylesheet" href="../PTUD_N10/css/home.css" type="text/css">
 </head>
 
 <body>
@@ -58,7 +58,7 @@
 
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./home.html"><img src="../PTUD_N10-master/img/logoha.png" alt=""></a>
+                        <a href="../PTUD_N10/home.html"><img src="../PTUD_N10/img/logoha.png" alt=""></a>
                     </div>
                 </div>
 
@@ -79,10 +79,10 @@
                         <ul>
                             <li><a href="#">Danh mục</a>
                                 <ul class="header__menu__dropdown">
-                                    <li><a href="../PTUD_N10-master/xemsanpham.html">Xem sản phẩm</a></li>
-                                    <li><a href="../PTUD_N10-master/dathang.html">Đặt hàng</a></li>
-                                    <li><a href="../PTUD_N10-master/thongtinsanpham.html">Xem thông tin đơn hàng</a></li>
-                                    <li><a href="../PTUD_N10-master/huydon.html">Hủy đơn</a></li>
+                                    <li><a href="../PTUD_N10/xemsanpham.html">Xem sản phẩm</a></li>
+                                    <li><a href="../PTUD_N10/dathang.html">Đặt hàng</a></li>
+                                    <li><a href="../PTUD_N10/thongtinsanpham.html">Xem thông tin đơn hàng</a></li>
+                                    <li><a href="../PTUD_N10/huydon.html">Hủy đơn</a></li>
                                     <li><a href="#">Khác</a></li>
                                 </ul>
                             </li>
@@ -131,75 +131,65 @@
             <div class="row featured__filter">
                 <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="img/xem3.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="img/xem1.jpg">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
+                            <h6><a href="#">L'ORÉAL</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fastfood">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="img/xem3.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="img/xem2.jpg">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
+                            <h6><a href="#">L'ORÉAL</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fresh-meat">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="img/xem2.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="img/xem3.jpg">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
+                            <h6><a href="#">L'ORÉAL</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix fastfood oranges">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="img/xem3.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="img/xem4.jpg">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
+                            <h6><a href="#">L'ORÉAL</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix fresh-meat vegetables">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="img/xem3.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="img/xem4.jpg">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
+                            <h6><a href="#">L'ORÉAL</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
@@ -208,43 +198,37 @@
                     <div class="featured__item">
                         <div class="featured__item__pic set-bg" data-setbg="img/xem3.jpg">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
+                            <h6><a href="#">L'ORÉAL</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix fresh-meat vegetables">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="img/xem3.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="img/xem2.jpg">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
+                            <h6><a href="#">L'ORÉAL</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix fastfood vegetables">
                     <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="img/xem3.jpg">
+                        <div class="featured__item__pic set-bg" data-setbg="img/xem1.jpg">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
+                            <h6><a href="#">L'ORÉAL</a></h6>
                             <h5>$30.00</h5>
                         </div>
                     </div>
