--- a/xemsanpham.html
+++ b/xemsanpham.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/pagephu.css" type="text/css">
+    <link rel="stylesheet" href="css/xemsanpham.css" type="text/css">
 </head>
 
 <body>
