--- a/dathang.html
+++ b/dathang.html
@@ -191,7 +191,7 @@
                                     </label>
                                 </div>
 
-                                <button type="submit" class="site-btn">ĐẶT HÀNG</button>
+                                <button type="submit" class="site-btn2">ĐẶT HÀNG</button>
                             </div>
                         </div>
                     </div>
