--- a/huydon.html
+++ b/huydon.html
@@ -45,7 +45,7 @@
                             <div class="header__top__right__social">
                                 <a href="#"><i class="fa fa-user"></i></a>
                                 <a href="#"><i class="fa fa-phone"></i></a>                   
-                                <a href="#"><i class="fa fa-shopping-bag"></i></a>
+                                <a href="shoping-cart.html"><i class="fa fa-shopping-bag"></i></a>
                             </div>
                         
                             <div class="header__top__right__auth">
@@ -62,7 +62,7 @@
 
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="../PTUD_N10/home.html"><img src="../PTUD_N10/img/logoha.png" alt=""></a>
+                        <a href="../PTUD_N10/index.php"><img src="../PTUD_N10/img/logoha.png" alt=""></a>
                     </div>
                 </div>
 
