--- a/thongtinsanpham.html
+++ b/thongtinsanpham.html
@@ -42,7 +42,7 @@
                             <div class="header__top__right__social">
                                 <a href="#"><i class="fa fa-user"></i></a>
                                 <a href="#"><i class="fa fa-phone"></i></a>                   
-                                <a href="#"><i class="fa fa-shopping-bag"></i></a>
+                                <a href="shoping-cart.html"><i class="fa fa-shopping-bag"></i></a>
                             </div>
                         
                             <div class="header__top__right__auth">
@@ -59,7 +59,7 @@
 
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="../PTUD_N10/home.html"><img src="../PTUD_N10/img/logoha.png" alt=""></a>
+                        <a href="../PTUD_N10/index.php"><img src="../PTUD_N10/img/logoha.png" alt=""></a>
                     </div>
                 </div>
 
@@ -171,7 +171,7 @@
                     </div><h4>Tổng tiền: 188.000 (Đã thanh toán)</h4><br>
                           <h5>Mã vận đơn: 092898648572</h5>
                 </form><br>
-                <button type="submit" class="site-btn"><a href="../PTUD_N10-master/home.html">XEM XONG</a></button>
+                <button type="submit" class="site-btn"><a href="../PTUD_N10-master/index.php">XEM XONG</a></button>
                 </div>
             </div>
         </div>
